--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 /* BootStrap Icon */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+/* Google Font for Universal */
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+/* font for Special Selector */
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
 }
 
 ::-webkit-scrollbar {
